rhte2023/04_deploy_applications/rhte2023-application-04/base/100-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rhte2023-application-04
  namespace: rhte2023-application-04
  labels:
    app: rhte2023-application-04
    app.kubernetes.io/component: rhte2023-application-04
    app.kubernetes.io/instance: rhte2023-application-04
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: rhte2023-application-04
  template:
    metadata:
      labels:
        deployment: rhte2023-application-04
    spec:
      volumes:
        - name: configmap
          configMap:
            name: application-properties
            defaultMode: 420
      containers:
        - name: spring-app
          image: >-
            quay.io/ilago/tetris-4-k8s:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: configmap
              mountPath: /tmp/config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
