rhte2023/04_deploy_applications/rhte2023-application-04/base/200-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rhte2023-application-04
  namespace: rhte2023-application-04
  labels:
    app: rhte2023-application-04
    app.kubernetes.io/component: rhte2023-application-04
    app.kubernetes.io/instance: rhte2023-application-04
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: rhte2023-application-04
